--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -3,4 +3,8 @@ kind: Secret
 metadata:
   name: secrets
 data:
-  db_password.txt: MTIzNA== 
+{{- if .Values.secrets.enabled }}
+{{- range $key, $value := .Values.secrets.data }}
+  {{ $key }}: {{ $value }}
+{{- end }}
+{{- end }}
