--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,35 +1,29 @@
-name: Release
+name: Helm CI
 
 on:
-  pull_request:
+  push:
     branches:
-       - main
-
-permissions:
-  contents: write
-  issues: write
-  pull-requests: write
+      - main  # Adjust the branch name as needed
 
 jobs:
-  release:
-    name: Release
+  lint-test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v1
         with:
-          node-version: '16'
-      - name: Install dependencies
-        run: npm ci
-      ## Build Step to Output dist/index.js
-      - name: Build
-        run: npm run build
-      - name: remove node_modules
-        run: rm -rf node-modules
-      ## With the above semantic-release configuration, will create a release and push the dist/index.js file as well as all the tags required
-      - name: Semantic Release
-        run: npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          version: 'latest'
+
+      - name: Lint Helm Chart
+        run: |
+          helm lint .
+        working-directory: ./
+
+      - name: Test Helm Chart
+        run: |
+          helm template . | kubeval --strict --ignore-missing-schemas
+        working-directory: ./
