--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,9 @@ jobs:
           version: 'latest'
 
       - name: Lint Helm Chart
-        run: |
-          helm lint .
-        working-directory: ./
+        run: helm lint .
 
       - name: Test Helm Chart
         run: |
           helm template . | kubeval --strict --ignore-missing-schemas
-        working-directory: ./
+        
