--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Test Helm Chart
         run: |
-          helm template . | kubeval --strict --ignore-missing-schemas
+          helm template .
         working-directory: ./
