--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: "webapp-service"
 spec:
   selector:
-    app: "webapp"
+    app: webapp
   ports:
   - port: 8080
     protocol: TCP
