--- a/templates/docker-secrets.yaml
+++ b/templates/docker-secrets.yaml
@@ -4,5 +4,5 @@ data:
 kind: Secret
 metadata:
   creationTimestamp: null
-  name: docker-regcred
+  name: {{ .Release.Name }}-docker-regcred
 type: kubernetes.io/dockerconfigjson
