--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secrets
+  name: {{ .Release.Name }}-secrets
 data:
 {{- if .Values.secrets.enabled }}
 {{- range $key, $value := .Values.secrets.data }}
