--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: "webapp-service"
-  name: "webapp-service"
+    app: {{ .Release.Name }}-webapp-service
+  name: {{ .Release.Name }}-webapp-service
 spec:
   selector:
-    app: webapp
+    app: {{ .Release.Name }}-webapp
   ports:
   - port: 8080
     protocol: TCP
