--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,28 +1,32 @@
 apiVersion: v2
-name: webapp-helm-chart
+name: csye7125-chart
 description: A Helm chart for Kubernetes
 
 dependencies:
   - name: postgresql
-    version: 13.1.5 # Specify the version you want to use
+    version: 13.1.5
     repository: https://github.com/bitnami/charts/tree/main/bitnami/postgresql
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+
 type: application
 
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
 appVersion: "1.16.0"
+
+# Add custom annotations to store team members' information and GitHub links
+annotations:
+  teamMembers:
+    - name: "Ankit Lall"
+      github: "https://github.com/AnkitLall"
+    - name: "Shikha Singh"
+      github: "https://github.com/shikha-commits"
+    - name: "Sai Sumanth Kammal Shetty "
+      github: "https://github.com/kammalshettys"
+    # Add more team members as needed
+
+# You can also use labels to store metadata
+labels:
+  teamMembers:
+    "Team Member 1": "https://github.com/AnkitLall"
+    "Team Member 2": "https://github.com/kammalshettys"
+    "Team Member 3": "https://github.com/shikha-commits"
+    # Add more team members as needed
