--- a/values.yaml
+++ b/values.yaml
@@ -13,6 +13,7 @@ primaryContainer:
   repository: sumanthksai/webapp
   tag: 1.7.0
   pullPolicy: IfNotPresent
+  serviceAccountName: webappcr-controller-manager
   ports:
     containerPort: 4000
   readinessProbe:
