Adding autoscaler and resource limit

--- a/templates/docker-secrets.yaml
+++ b/templates/docker-secrets.yaml
@@ -5,4 +5,5 @@ kind: Secret
 metadata:
   creationTimestamp: null
   name: {{ .Release.Name }}-docker-regcred
+  namespace: {{ .Values.namespace.name }}
 type: kubernetes.io/dockerconfigjson
