--- a/templates/config-map.yaml
+++ b/templates/config-map.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configs
+  namespace: {{ .Values.namespace.name }}
 data:
 {{- if .Values.configMap.enabled }}
   flyway.conf: |
