--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-secrets
+  namespace: {{ .Values.namespace.name }}
 data:
 {{- if .Values.secrets.enabled }}
 {{- range $key, $value := .Values.secrets.data }}
