--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}-webapp-service
   name: {{ .Release.Name }}-webapp-service
+  namespace: {{ .Values.namespace.name }}
 spec:
   selector:
     app: {{ .Release.Name }}-webapp
