--- a/values.yaml
+++ b/values.yaml
@@ -1,13 +1,24 @@
 deployment:
   replicas: 3
+  maxReplicas: 5
   strategy:
     type: RollingUpdate
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
+  resources:
+    requests: 
+      memory: "128Mi"
+      cpu: "250m"
+    limits:
+      memory: "256Mi"
+      cpu: "500m"
   minReadySeconds: 30
   progressDeadlineSeconds: 120
-
+  metrics:
+    averageUtilization: 5
+namespace:
+  name: webapp
 primaryContainer:
   name: csye7125-webapp
   repository: sumanthksai/webapp
