--- a/namespace-helm-chart/templates/limitRange.yaml
+++ b/namespace-helm-chart/templates/limitRange.yaml
@@ -2,18 +2,19 @@ apiVersion: v1
 kind: LimitRange
 metadata:
   name: default-limits
+  namespace: webapp
 spec:
   limits:
   - type: Container
     default:
       memory: 512Mi
-      cpu: 100m
+      cpu: 500m
     defaultRequest:
       memory: 256Mi
       cpu: 50m
     max:
       memory: 1Gi
-      cpu: 200m
+      cpu: 500m
     min:
       memory: 64Mi
       cpu: 10m
