--- a/webapp-chart/templates/hpa.yaml
+++ b/webapp-chart/templates/hpa.yaml
@@ -8,7 +8,7 @@ spec:
    apiVersion: apps/v1
    kind: Deployment
    name: {{ .Release.Name }}-csye7125
-  minReplicas: {{ .Values.deployment.replicas }}
+  minReplicas: {{ .Values.deployment.minReplicas }}
   maxReplicas: {{ .Values.deployment.maxReplicas }}
   metrics:
    - type: Resource
