--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,16 @@ jobs:
 
       - name: Lint Helm Chart
         run: helm lint
-        working-directory: ./
+        working-directory: ./webapp-chart
+      - name: Lint Helm Chart
+        run: helm lint
+        working-directory: ./namespace-helm-chart
 
       - name: Test Helm Chart
         run: |
           helm template .
-        working-directory: ./
+        working-directory: ./namespace-helm-chart
+      - name: Test Helm Chart
+        run: |
+          helm template .
+        working-directory: ./webapp-chart
