--- a/templates/kafka-virtualService.yaml
+++ b/templates/kafka-virtualService.yaml
@@ -2,13 +2,15 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: kafka-virtual-service
-  namespace: webapp
+  namespace: consumer
 spec:
   hosts:
-  - dev-kafka-controller-0.kafka-namespace.svc.cluster.local
-  http:
-  - route:
-    - destination:
-        host: dev-kafka-controller-0.kafka-namespace.svc.cluster.local
-        port:
-          number: 9092
+    - dev-kafka.consumer.svc.cluster.local
+  tcp:
+    - match:
+        - port: 9092
+      route:
+        - destination:
+            host: dev-kafka.consumer.svc.cluster.local
+            port:
+              number: 9092
