--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         app: {{ .Release.Name }}-webapp
       spec:
         affinity:
-          podAffinity:
+          podAntiAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
