--- a/templates/role-binding.yaml
+++ b/templates/role-binding.yaml
@@ -6,6 +6,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: webapp-service-account
+  namespace: {{ .Values.namespace.name }}
 roleRef:
   kind: Role
   name: webapp-role
