--- a/templates/role-binding.yaml
+++ b/templates/role-binding.yaml
@@ -2,12 +2,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   namespace: {{ .Values.namespace.name }}
-  name: webapp-role-binding
+  name: {{ .Values.role.name }}-binding
 subjects:
 - kind: ServiceAccount
-  name: webapp-service-account
+  name: {{ .Release.Name }}-service-account
   namespace: {{ .Values.namespace.name }}
 roleRef:
   kind: Role
-  name: webapp-role
+  name: {{ .Values.role.name }}
   apiGroup: rbac.authorization.k8s.io
