--- a/templates/service-account.yaml
+++ b/templates/service-account.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: webapp-service-account
+  name: {{ .Release.Name }}-service-account
   namespace: {{ .Values.namespace.name }}
