--- a/templates/virtual-service.yaml
+++ b/templates/virtual-service.yaml
@@ -1,15 +1,15 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: webapp-virtual-service
+  name: {{ .Values.virtualService.name }}
 spec:
   hosts:
   - "*"
   gateways:
-  - webapp-istio-gateway
+  - {{ .Values.gateway.name }}
   http:
    - route:
       - destination:
-          host: webapp-service.webapp.svc.cluster.local
+          host: {{ .Release.Name }}-service.webapp.svc.cluster.local
           port:
-            number: 80
+            number: {{ .Values.gateway.port }}
