--- a/templates/role-binding.yaml
+++ b/templates/role-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  namespace: {{ .Values.namespace.name }}
+  namespace: webappcr-system
   name: {{ .Values.role.name }}-binding
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name }}-service-account
-  namespace: {{ .Values.namespace.name }}
+  namespace: webappcr-system
 roleRef:
   kind: Role
   name: {{ .Values.role.name }}
