--- a/templates/role.yaml
+++ b/templates/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: {{ .Values.namespace.name }}
+  namespace: webappcr-system
   name: {{ .Values.role.name }}
 rules:
  - apiGroups: [""]
